[package]
name = "runeblood_ascension"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Compiles a DLL that will run in the game

[dependencies]
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs", package = "eldenring" }
eldenring-util = { git = "https://github.com/vswarte/fromsoftware-rs", package = "eldenring-util" }
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs", package = "fromsoftware-shared" }