[package]
name = "runeblood_ascension"
version = "1.0.1"
edition = "2024"
description = "Elden Ring mod that permanently enables Great Rune effect"
authors = ["Charlie's Boyfriend [ReinhardTristanHeydrich]"]
#license =
repository = "https://github.com/ReinhardTristanHeydrich/Runeblood-Ascension"

[lib]
crate-type = ["cdylib"] # Compiles a DLL that will run in the game

[dependencies]
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs", package = "eldenring" }
eldenring-util = { git = "https://github.com/vswarte/fromsoftware-rs", package = "eldenring-util" }
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs", package = "fromsoftware-shared" }